Database Configured, add Store -> Handler abstractions, Handlers.RegisterHandler is now inserting users in database via sqlc's CreateUser

--- a/SLACKPLUS_SERVER/Makefile
+++ b/SLACKPLUS_SERVER/Makefile
@@ -19,4 +19,4 @@ sqlc:
 sqlc_delete:
 	rm -rf ./db/sqlc
 
-.PHONY: postgres createdb dropdb migrateup migratedown
+.PHONY: postgres createdb dropdb migrateup migratedown sqlc sqlc_delete
